--- a/jobs/index.html
+++ b/jobs/index.html
@@ -31,13 +31,14 @@
         <meta name="twitter:description" content="Open positions within the Truveris Engineering team">
         <meta name="twitter:creator" content="@truveris">
         <meta name="twitter:domain" content="truveris.github.io">
+        <meta name="twitter:image:src" content="/lib/img/logo.png">
 
         <meta property="og:title" content="we're hiring - truveris.github.com">
         <meta property="og:description" content="Open positions within the Truveris Engineering team">
         <meta property="og:url" content="https://truveris.github.io/">
         <meta property="og:site_name" content="truveris.github.io">
         <meta property="og:type" content="blog">
-        <meta property="og:image" content="lib/img/logo.png">
+        <meta property="og:image" content="/lib/img/logo.png">
     </head>
 
     <body class="not-home" itemscope itemtype="http://schema.org/WebPage">
