--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <meta property="og:image" content="/lib/img/logo.png">
     </head>
 
-    <body class="home" itemscope itemtype="http://schema.org/WebPage">
+    <body itemscope itemtype="http://schema.org/WebPage">
                 <header class="header clearfix headroom headroom--top" id="header" role="banner">
 
             <a href="/">
@@ -57,7 +57,6 @@
         </header>
 
         
-
 
 
 
@@ -146,7 +145,6 @@ approach to user emulation testing.
     </script>
 
 </html>
-
 
 
 
