--- a/output/jobs/index.html
+++ b/output/jobs/index.html
@@ -41,7 +41,7 @@
         <meta property="og:image" content="/lib/img/logo.png">
     </head>
 
-    <body class="not-home" itemscope itemtype="http://schema.org/WebPage">
+    <body itemscope itemtype="http://schema.org/WebPage">
                 <header class="header clearfix headroom headroom--top" id="header" role="banner">
 
             <a href="/">
@@ -132,7 +132,6 @@
     </script>
 
 </html>
-
 
 
 
