--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="vcard">
                 <span class="fn author" itemprop="author" itemscope=""
                     itemtype="http://schema.org/Person">
-                    <a href="https://github.com/dlloyd" class="url"
+                    <a href="https://github.com/dglloyd" class="url"
                         ><span itemprop="name">Dan Lloyd</span></a>
                 </span>
             </div>
