--- a/site/jobs/index.html
+++ b/site/jobs/index.html
@@ -15,7 +15,8 @@
 
         <p>
             We're growing fast and have a ton of interesting problems to solve. If
-            any of the following qualifiers apply to you, please reach out:
+            you feel like reducing the cost of healthcare for Americans and any
+            of the following qualifiers apply to you, please reach out:
         </p>
 
         <ul>
@@ -25,9 +26,10 @@
         </ul>
 
         <p>
-            The following text contains our email, figure out the codec and send us
-            your portfolio, github, resume or whatever you feel like it. This little
-            trick is a good spam filter and it shows you're not a complete idiot.
+            The following text contains our email, figure out the codec and
+            send us your portfolio, github, resume, code snippets or whatever
+            you think is relevant. This little trick is a good spam filter and
+            it shows you're not a complete idiot.
         </p>
 
     <center><pre><code class="language-raw">aW1wb3J0IGNvZGVjcwpwcmludChjb
