--- a/jobs/index.html
+++ b/jobs/index.html
@@ -81,9 +81,9 @@
         </p>
 
         <ul>
-            <li>Unix/Linux hacker
-            <li>Data nerd
-            <li>Byte artist
+            <li>Unix/Linux hacker</li>
+            <li>Data nerd</li>
+            <li>Byte artist</li>
         </ul>
 
         <p>
