--- a/jobs/index.html
+++ b/jobs/index.html
@@ -70,7 +70,7 @@
         <header>
 			<figure>
 				 <img src="/lib/img/scientist.png" alt="Truveris is hiring" class="roundimg">
-			</figure
+			</figure>
             <h1 itemprop="name headline" role="heading">We're hiring!</h1>
         </header>
 
