Removing unecessary img, adding svg illustration for jobs and updating html accordingly

--- a/site/jobs/index.html
+++ b/site/jobs/index.html
@@ -11,7 +11,7 @@
         <!-- Article header -->
         <header>
 			<figure>
-				 <img src="/lib/img/scientist.png" alt="Truveris is hiring" class="roundimg">
+				 <img src="/lib/img/scientist.svg" alt="Truveris is hiring" class="roundimg">
 			</figure>
             <h1 itemprop="name headline" role="heading">We're hiring!</h1>
         </header>
