--- a/site/index.html
+++ b/site/index.html
@@ -44,6 +44,12 @@
         </p>
     </article>
     % endfor
+	
+	<p class="mobile-cta">
+		<a href="/jobs/" class="cta" role="link">
+			We are hiring <span class="icon-right-open-mini"></span>
+		</a>
+	</p>
 </section>
 
 ## vim: ft=mako
