--- a/site/jobs/index.html
+++ b/site/jobs/index.html
@@ -13,7 +13,7 @@
 			<figure>
 				 <img src="/lib/img/scientist.svg" alt="Truveris is hiring" class="roundimg">
 			</figure>
-            <h1 itemprop="name headline" role="heading">We're hiring!</h1>
+            <h1 itemprop="name headline" role="heading">We're hiring in NYC!</h1>
         </header>
 
         <p>
