Find us also on IRC.

--- a/site/jobs/index.html
+++ b/site/jobs/index.html
@@ -44,6 +44,11 @@
 			</div>
 		</div>
 
+        <p>
+            You can also find us on IRC, #truveris on
+            <a href="https://freenode.net/">Freenode</a>.
+        </p>
+
     </article>
 
 ##    % for job in jobs:
