--- a/jobs/index.html
+++ b/jobs/index.html
@@ -109,6 +109,11 @@
 			</div>
 		</div>
 
+        <p>
+            You can also find us on IRC, #truveris on
+            <a href="https://freenode.net/">Freenode</a>.
+        </p>
+
     </article>
 
 </section>
