Point the job section to stack overflow

--- a/site/jobs/index.html
+++ b/site/jobs/index.html
@@ -17,32 +17,48 @@
         </header>
 
         <p>
-            We're growing fast and have a ton of interesting problems to solve. If
-            you feel like reducing the cost of healthcare for Americans and any
-            of the following qualifiers apply to you, please reach out:
+            We're building simple and powerful tools to reduce the cost of
+            healthcare for Americans.  If you are a Unix/Linux hacker, data
+            nerd or byte artist that would be interested in working for us,
+            check out our available position on Stack Overflow:
         </p>
 
-        <ul>
-            <li>Unix/Linux hacker</li>
-            <li>Data nerd</li>
-            <li>Byte artist</li>
-        </ul>
-
-        <p>
-            The following text contains our email, figure out the codec and
-            send us your portfolio, github, resume, code snippets or whatever
-            you think is relevant. This little trick is a good spam filter and
-            it shows you're not a complete idiot.
+        <p style="text-align: center">
+            <a href="http://stackoverflow.com/jobs/companies/truveris">Stack Overflow - Jobs at Truveris</a>
         </p>
 
-		<div class="crypt-cont">
-			<div class="cryptmail">
-				aW1wb3J0IGNvZGVjcwpwcmludChjb<br>
-				2RlY3MuZGVjb2RlKHN0cigiciIuam<br>
-				9pbihbInEiLCAiaUBnZWhpIiwgImV<br>
-				2Zi5wYnoiXSkpLCAicm90MTMiKSkK
-			</div>
-		</div>
+##        <ul>
+##            <li>Backend Software Engineer (Python, PostgreSQL, SQLAlchemy)</li>
+##            <li>Frontend Softwarae Engineer (HTML5/CSS3, React, Pyramid)</li>
+##            <li>DevOps (AWS, Ubuntu, Saltstack)</li>
+##        </ul>
+##
+##        <p>
+##            In order to start the interview process, you need to use this very
+##            HTML file and send us a keyword.  If you're applying for the
+##            backend software engineering
+##            position, write a Python script to download the HTML file and fine
+##            the largest unsigned 64-bit big endian integer that is prime.
+##            software engineering position, you'll need to write a Python script
+##            that
+##            downloads the file, calculates its SHA256  and finds the largest prime number that could be
+##            obtain from consecutive byte in this file (big
+##            endian).  If you're 
+##
+##            The following text contains our emails, figure out the codec and
+##            send us your portfolio, github, resume, code snippets or whatever
+##            you think is relevant. This little trick is a good spam filter and
+##            it shows you're not a complete idiot.
+##        </p>
+##
+##		<div class="crypt-cont">
+##			<div class="cryptmail">
+##				aW1wb3J0IGNvZGVjcwpwcmludChjb<br>
+##				2RlY3MuZGVjb2RlKHN0cigiciIuam<br>
+##				9pbihbInEiLCAiaUBnZWhpIiwgImV<br>
+##				2Zi5wYnoiXSkpLCAicm90MTMiKSkK
+##			</div>
+##		</div>
 
         <p>
             You can also find us on IRC, #truveris on
