--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <header>
             <figure>
                 <a href="/articles/android-advanced-data-binding/">
-                    <img src="/lib/img/scientist.svg"
+                    <img src="/lib/img/android.svg"
                         alt="Description" class="roundimg">
                 </a>
             </figure>
@@ -152,7 +152,7 @@ Result: I loved it.
         <header>
             <figure>
                 <a href="/articles/my-tests-are-slow/">
-                    <img src="/lib/img/helmet.svg"
+                    <img src="/lib/img/server.svg"
                         alt="Description" class="roundimg">
                 </a>
             </figure>
@@ -190,7 +190,7 @@ slowly than mine. Much more slowly than the build server, too.
         <header>
             <figure>
                 <a href="/articles/break-on-attribute-change/">
-                    <img src="/lib/img/helmet.svg"
+                    <img src="/lib/img/frontend.svg"
                         alt="Description" class="roundimg">
                 </a>
             </figure>
