--- a/jobs/index.html
+++ b/jobs/index.html
@@ -80,32 +80,16 @@
         </header>
 
         <p>
-            We're growing fast and have a ton of interesting problems to solve. If
-            you feel like reducing the cost of healthcare for Americans and any
-            of the following qualifiers apply to you, please reach out:
+            We're building simple and powerful tools to reduce the cost of
+            healthcare for Americans.  If you are a Unix/Linux hacker, data
+            nerd or byte artist that would be interested in working for us,
+            check out our available position on Stack Overflow:
         </p>
 
-        <ul>
-            <li>Unix/Linux hacker</li>
-            <li>Data nerd</li>
-            <li>Byte artist</li>
-        </ul>
-
-        <p>
-            The following text contains our email, figure out the codec and
-            send us your portfolio, github, resume, code snippets or whatever
-            you think is relevant. This little trick is a good spam filter and
-            it shows you're not a complete idiot.
+        <p style="text-align: center">
+            <a href="http://stackoverflow.com/jobs/companies/truveris">Stack Overflow - Jobs at Truveris</a>
         </p>
 
-		<div class="crypt-cont">
-			<div class="cryptmail">
-				aW1wb3J0IGNvZGVjcwpwcmludChjb<br>
-				2RlY3MuZGVjb2RlKHN0cigiciIuam<br>
-				9pbihbInEiLCAiaUBnZWhpIiwgImV<br>
-				2Zi5wYnoiXSkpLCAicm90MTMiKSkK
-			</div>
-		</div>
 
         <p>
             You can also find us on IRC, #truveris on
