--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <header>
             <figure>
                 <a href="/articles/pycon-2016/">
-                    <img src="/lib/img/scientist.svg"
+                    <img src="/lib/img/mic1.svg"
                         alt="Description" class="roundimg">
                 </a>
             </figure>
