Replace truveris.github.com with truveris.github.io

--- a/site/index.html
+++ b/site/index.html
@@ -1,6 +1,6 @@
 <%inherit file="/base.mako"/>
 
-<%def name="title()">truveris.github.com</%def>
+<%def name="title()">truveris.github.io</%def>
 
 <!-- Main Section -->
 <section class="main" itemscope itemtype="http://schema.org/Blog" role="main">
