--- a/site/jobs/index.html
+++ b/site/jobs/index.html
@@ -1,6 +1,6 @@
 <%inherit file="/base.mako"/>
 
-<%def name="title()">we're hiring - truveris.github.com</%def>
+<%def name="title()">we're hiring - truveris.github.io</%def>
 <%def name="description()">Open positions within the Truveris Engineering team</%def>
 
 <section class="main" itemscope itemtype="http://schema.org/CollectionPage" role="main">
