--- a/jobs/index.html
+++ b/jobs/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>we're hiring - truveris.github.com</title>
+        <title>we're hiring - truveris.github.io</title>
         <meta name="description" content="Open positions within the Truveris Engineering team">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -27,18 +27,21 @@
         <link href="https://plus.google.com/+Truverisprescriptions" rel="publisher">
         <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@truveris">
-        <meta name="twitter:title" content="we're hiring - truveris.github.com">
+        <meta name="twitter:title" content="we're hiring - truveris.github.io">
         <meta name="twitter:description" content="Open positions within the Truveris Engineering team">
         <meta name="twitter:creator" content="@truveris">
         <meta name="twitter:domain" content="truveris.github.io">
         <meta name="twitter:image:src" content="/lib/img/logo.png">
 
-        <meta property="og:title" content="we're hiring - truveris.github.com">
+        <meta property="og:title" content="we're hiring - truveris.github.io">
         <meta property="og:description" content="Open positions within the Truveris Engineering team">
         <meta property="og:url" content="https://truveris.github.io/">
         <meta property="og:site_name" content="truveris.github.io">
         <meta property="og:type" content="blog">
         <meta property="og:image" content="/lib/img/logo.png">
+
+        <!-- SEO -->
+        
 
         <!-- Force https -->
         <script type="text/javascript">
@@ -137,6 +140,7 @@
     </body>
 
 </html>
+
 
 
 
