Update hiring page.

--- a/site/jobs/index.html
+++ b/site/jobs/index.html
@@ -17,52 +17,27 @@
         </header>
 
         <p>
-            We're building simple and powerful tools to reduce the cost of
-            healthcare for Americans.  If you are a Unix/Linux hacker, data
-            nerd or byte artist that would be interested in working for us,
-            check out our available position on Stack Overflow:
+            Stop wasting your talent placing ads, working in finance or
+            building yet another social networking app, join us to improve
+            healthcare in America. The systems we build help millions of
+            American afford their medications and bring transparency in the
+            complicated space of pharmacy benefits.
         </p>
 
-        <p style="text-align: center">
-            <a href="http://stackoverflow.com/jobs/companies/truveris">Stack Overflow - Jobs at Truveris</a>
-        </p>
-
-##        <ul>
-##            <li>Backend Software Engineer (Python, PostgreSQL, SQLAlchemy)</li>
-##            <li>Frontend Softwarae Engineer (HTML5/CSS3, React, Pyramid)</li>
-##            <li>DevOps (AWS, Ubuntu, Saltstack)</li>
-##        </ul>
-##
-##        <p>
-##            In order to start the interview process, you need to use this very
-##            HTML file and send us a keyword.  If you're applying for the
-##            backend software engineering
-##            position, write a Python script to download the HTML file and fine
-##            the largest unsigned 64-bit big endian integer that is prime.
-##            software engineering position, you'll need to write a Python script
-##            that
-##            downloads the file, calculates its SHA256  and finds the largest prime number that could be
-##            obtain from consecutive byte in this file (big
-##            endian).  If you're 
-##
-##            The following text contains our emails, figure out the codec and
-##            send us your portfolio, github, resume, code snippets or whatever
-##            you think is relevant. This little trick is a good spam filter and
-##            it shows you're not a complete idiot.
-##        </p>
-##
-##		<div class="crypt-cont">
-##			<div class="cryptmail">
-##				aW1wb3J0IGNvZGVjcwpwcmludChjb<br>
-##				2RlY3MuZGVjb2RlKHN0cigiciIuam<br>
-##				9pbihbInEiLCAiaUBnZWhpIiwgImV<br>
-##				2Zi5wYnoiXSkpLCAicm90MTMiKSkK
-##			</div>
-##		</div>
+        <ul>
+            <li>Backend Software Engineer and Architects (Python, PostgreSQL, SQLAlchemy)</li>
+            <li>DevOps (AWS, Ubuntu, Saltstack)</li>
+            <li>QA (Selenium, Python, Nosetests)</li>
+            <li>Technical Project Manager</li>
+        </ul>
 
         <p>
-            You can also find us on IRC, #truveris on
-            <a href="https://freenode.net/">Freenode</a>.
+            In order to start the interview process, you'll need to calculate
+            the SHA256 of your email address added to the body of this page,
+            i.e. SHA256(email+body).  Send the result to <a
+            href="mailto:bertrand@truveris.com">bertrand@truveris.com</a> with
+            whatever code/command-line you used to generate it and your resume
+            (yes, that applies to QAs and Project Managers as well).
         </p>
 
     </article>
