--- a/jobs/index.html
+++ b/jobs/index.html
@@ -83,20 +83,27 @@
         </header>
 
         <p>
-            We're building simple and powerful tools to reduce the cost of
-            healthcare for Americans.  If you are a Unix/Linux hacker, data
-            nerd or byte artist that would be interested in working for us,
-            check out our available position on Stack Overflow:
+            Stop wasting your talent placing ads, working in finance or
+            building yet another social networking app, join us to improve
+            healthcare in America. The systems we build help millions of
+            American afford their medications and bring transparency in the
+            complicated space of pharmacy benefits.
         </p>
 
-        <p style="text-align: center">
-            <a href="http://stackoverflow.com/jobs/companies/truveris">Stack Overflow - Jobs at Truveris</a>
-        </p>
-
+        <ul>
+            <li>Backend Software Engineer and Architects (Python, PostgreSQL, SQLAlchemy)</li>
+            <li>DevOps (AWS, Ubuntu, Saltstack)</li>
+            <li>QA (Selenium, Python, Nosetests)</li>
+            <li>Technical Project Manager</li>
+        </ul>
 
         <p>
-            You can also find us on IRC, #truveris on
-            <a href="https://freenode.net/">Freenode</a>.
+            In order to start the interview process, you'll need to calculate
+            the SHA256 of your email address added to the body of this page,
+            i.e. SHA256(email+body).  Send the result to <a
+            href="mailto:bertrand@truveris.com">bertrand@truveris.com</a> with
+            whatever code/command-line you used to generate it and your resume
+            (yes, that applies to QAs and Project Managers as well).
         </p>
 
     </article>
