--- a/site/jobs/index.html
+++ b/site/jobs/index.html
@@ -34,7 +34,7 @@
         <p>
             In order to start the interview process, you'll need to calculate
             the SHA256 of your email address added to the body of this page,
-            i.e. SHA256(email+body).  Send the result to <a
+            i.e. SHA256(body+email).  Send the result to <a
             href="mailto:bertrand@truveris.com">bertrand@truveris.com</a> with
             whatever code/command-line you used to generate it and your resume
             (yes, that applies to QAs and Project Managers as well).
