Use cryptography notation.

--- a/site/jobs/index.html
+++ b/site/jobs/index.html
@@ -34,8 +34,8 @@
         <p>
             In order to start the interview process, you'll need to calculate
             the SHA256 of your email address added to the body of this page,
-            i.e. SHA256(body+email).  Send the result to <a
-            href="mailto:bertrand@truveris.com">bertrand@truveris.com</a> with
+            i.e. <tt>SHA256(body || email)</tt>.  Send the result <a
+            href="mailto:bertrand@truveris.com">this email</a> with
             whatever code/command-line you used to generate it and your resume
             (yes, that applies to QAs and Project Managers as well).
         </p>
