--- a/site/jobs/index.html
+++ b/site/jobs/index.html
@@ -34,10 +34,10 @@
         <p>
             In order to start the interview process, you'll need to calculate
             the SHA256 of your email address added to the body of this page,
-            i.e. <tt>SHA256(body || email)</tt>.  Send the result <a
-            href="mailto:bertrand@truveris.com">this email</a> with
-            whatever code/command-line you used to generate it and your resume
-            (yes, that applies to QAs and Project Managers as well).
+            i.e. <tt>SHA256(body || email)</tt>.  Send your resume and the the
+            hash to <a href="mailto:bertrand@truveris.com">this email</a> along
+            with the code/command-line you used to generate it (yes, that
+            applies to QAs and Project Managers as well).
         </p>
 
     </article>
