--- a/site/jobs/index.html
+++ b/site/jobs/index.html
@@ -24,6 +24,12 @@
             complicated space of pharmacy benefits.
         </p>
 
+        <p>
+            If you like simplicity, write code for others to read, love UNIX
+            and its philosophy, Python and its zen, you may have found a new
+            home.
+        </p>
+
         <ul>
             <li>Backend Software Engineer and Architects (Python, PostgreSQL, SQLAlchemy)</li>
             <li>DevOps (AWS, Ubuntu, Saltstack)</li>
@@ -32,11 +38,14 @@
         </ul>
 
         <p>
-            In order to start the interview process, you'll need to calculate
-            the SHA256 of your email address added to the body of this page,
+            In order to start the interview process, you need to calculate the
+            SHA256 of your email address concatenated to the body of this page,
             i.e. <tt>SHA256(body || email)</tt>.  Send your resume and the the
-            hash to <a href="mailto:bertrand@truveris.com">this email</a> along
-            with the code/command-line you used to generate it (yes, that
+            resulting hash to
+
+                <a href="mailto:bertrand@truveris.com">this email</a>
+
+            along with the code/command-line you used to generate it (yes, that
             applies to QAs and Project Managers as well).
         </p>
 
