More verbiage fix.

--- a/site/jobs/index.html
+++ b/site/jobs/index.html
@@ -38,10 +38,10 @@
         </ul>
 
         <p>
-            In order to start the interview process, you need to calculate the
-            SHA256 of your email address concatenated to the body of this page,
-            i.e. <tt>SHA256(body || email)</tt>.  Send your resume and the the
-            resulting hash to
+            In order to start the interview process: concatenate the body of
+            this page and your email, calculate the SHA256 hash of the
+            resulting string, i.e. <tt>SHA256(body || email)</tt>, then the
+            output with your resume to:
 
                 <a href="mailto:bertrand@truveris.com">this email</a>
 
