Clarify that we are talking about the address...

--- a/site/jobs/index.html
+++ b/site/jobs/index.html
@@ -39,9 +39,9 @@
 
         <p>
             In order to start the interview process: concatenate the body of
-            this page and your email, calculate the SHA256 hash of the
-            resulting string, i.e. <tt>SHA256(body || email)</tt>, then the
-            output with your resume to:
+            this page and your email address, calculate the SHA256 hash of the
+            resulting string, i.e. <tt>SHA256(body || email_address)</tt>, then
+            the output with your resume to:
 
                 <a href="mailto:bertrand@truveris.com">this email</a>
 
