I suck at Englishing.

--- a/site/jobs/index.html
+++ b/site/jobs/index.html
@@ -40,7 +40,7 @@
         <p>
             In order to start the interview process: concatenate the body of
             this page and your email address, calculate the SHA256 hash of the
-            resulting string, i.e. <tt>SHA256(body || email_address)</tt>, then
+            resulting string, i.e. <tt>SHA256(body || email_address)</tt>, send
             the output with your resume to:
 
                 <a href="mailto:bertrand@truveris.com">this email</a>
