--- a/jobs/index.html
+++ b/jobs/index.html
@@ -105,14 +105,19 @@
 
         <p>
             In order to start the interview process: concatenate the body of
-            this page and your email address, calculate the SHA256 hash of the
-            resulting string, i.e. <tt>SHA256(body || email_address)</tt>, send
-            the output with your resume to:
+            this page and <b>your</b> email address, calculate the SHA256 hash of the
+            resulting string, (in cryptographic or SQL notation):
+        </p>
 
-                <a href="mailto:bertrand@truveris.com">this email</a>
+        <p>
+            <tt>SHA256(body || your_email_address)</tt>
+        </p>
 
-            along with the code/command-line you used to generate it (yes, that
-            applies to QAs and Project Managers as well).
+        <p>
+            Send the output with your resume to <a
+            href="mailto:sproefke@truveris.com">Sarah</a>  along with the
+            code/command-line you used to generate it (yes, that applies to
+            QAs, Frontend and Project Managers as well).
         </p>
 
     </article>
