--- a/jobs/index.html
+++ b/jobs/index.html
@@ -104,9 +104,10 @@
         </ul>
 
         <p>
-            In order to start the interview process: concatenate the body of
-            this page and <b>your</b> email address, calculate the SHA256 hash of the
-            resulting string, (in cryptographic or SQL notation):
+            In order to start the interview process: concatenate the
+            <b>body</b> of the HTTP response for this URL and <b>your</b> email
+            address and calculate the SHA256 hash of the resulting string. In
+            cryptographic or SQL notation:
         </p>
 
         <p>
@@ -114,8 +115,8 @@
         </p>
 
         <p>
-            Send the output with your resume to <a
-            href="mailto:sproefke@truveris.com">Sarah</a>  along with the
+            Send the output with your resume to
+            <a href="mailto:sproefke@truveris.com">Sarah</a>  along with the
             code/command-line you used to generate it (yes, that applies to
             QAs, Frontend and Project Managers as well).
         </p>
