--- a/jobs/index.html
+++ b/jobs/index.html
@@ -104,21 +104,15 @@
         </ul>
 
         <p>
-            In order to start the interview process: concatenate the
-            <b>body</b> of the HTTP response for this URL and <b>your</b> email
-            address and calculate the SHA256 hash of the resulting string. In
-            cryptographic or SQL notation:
-        </p>
+            In order to start the interview process: concatenate the body of
+            this page and your email address, calculate the SHA256 hash of the
+            resulting string, i.e. <tt>SHA256(body || email_address)</tt>, send
+            the output with your resume to:
 
-        <p>
-            <tt>SHA256(body || your_email_address)</tt>
-        </p>
+                <a href="mailto:bertrand@truveris.com">this email</a>
 
-        <p>
-            Send the output with your resume to
-            <a href="mailto:sproefke@truveris.com">Sarah</a>  along with the
-            code/command-line you used to generate it (yes, that applies to
-            QAs, Frontend and Project Managers as well).
+            along with the code/command-line you used to generate it (yes, that
+            applies to QAs and Project Managers as well).
         </p>
 
     </article>
